# langchain-rag-sample-01

./: Dockerfile  LICENSE  README.md  ingestion_main.py  logging_config.py  main.py  pyproject.toml  sample.env
common/databases/: __init__.py  abstract_vector_store.py  chromadb_vector_store.py
common/embedders/: __init__.py  abstract_document_embedder.py  bedrock_embedder.py  ollama_embedder.py  openai_embedder.py
common/utils/: __init__.py  aws_util.py
ingestion/: __init__.py  ingestion_pipeline.py  ingestion_pipeline_handler.py  universal_embedder.py  universal_loader.py  universal_splitter.py  universal_vector_store.py
ingestion/embedders/: __init__.py  abstract_document_embedder.py
ingestion/loaders/: __init__.py  abstract_document_loader.py  docx_loader.py  pdf_loader.py  text_loader.py  universal_loader.py
ingestion/splitters/: __init__.py  abstract_document_splitter.py  fixed_width_splitter.py  paragraph_splitter.py  semantic_splitter.py  sentence_splitter.py
