[project]
name = "langchain-rag-sample-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.13",
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.23",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langchain[aws,openai]>=0.3.25",
    "pymupdf>=1.25.5",
    "pypdf>=5.5.0",
    "types-boto3[bedrock,boto3,client]>=1.38.36",
    "watchdog>=6.0.0",
]
